The project has switched to poetry

--- a/evohome_helper_edge/Dockerfile
+++ b/evohome_helper_edge/Dockerfile
@@ -3,10 +3,11 @@ FROM $BUILD_FROM
 
 WORKDIR /opt/evohome-helper
 
-# Copy data for add-on
 COPY ./rootfs/. ./
 
 RUN chmod +x ./run.sh ./src/main.py
-RUN pip3 install --no-cache-dir -r ./src/requirements.txt
+RUN pip3 install --no-cache-dir poetry \
+    && poetry config virtualenvs.create false \
+    && poetry install --only main --no-root --no-interaction --no-ansi
 
 CMD [ "./run.sh" ]
